# PySniT

./: .gitignore  Pipfile  README.md  mypy.ini  setup.cfg
src/pysnit/: __init__.py  commands.py
src/pysnit/pysnitlib/: errorhandle.py  errors.py  funcs.py  snippet.py  snippetcollector.py  snippetfileio.py  types.py  utils.py  vscode.py
tests/: conftest.py
tests/snippet/: sample.py  test_snippet.py
tests/snippetcollector/: samplepath.toml  test_snippetcollector.py
tests/snippetcollector/sample_modules/: sample1.py  sample2.py
tests/utils/: test_utils.py
