[metadata]
name = pysnit
version = attr: pysnit.__version__

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires =
    fire
    toml
    typing_extensions

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pysnit = pysnit.commands:main
